Update machine images

--- a/Prevu.Drawings/Machines/Screws/DETAIL_SCW_Flex_Verticale.xaml
+++ b/Prevu.Drawings/Machines/Screws/DETAIL_SCW_Flex_Verticale.xaml
@@ -6,31 +6,31 @@
              xmlns:local="clr-namespace:Prevu.Drawings.Machines.Screws"
              mc:Ignorable="d" 
              >
-    <Viewbox  Stretch="Uniform">
-        <Canvas Name="svg17" Width="99" Height="204">
+    <Viewbox Stretch="Uniform">
+        <Canvas Name="svg17" Width="231" Height="204">
             <Canvas.Resources>
-                <RectangleGeometry  x:Key="clip0_1078_28" Rect="0, 0, 98.3571, 204"/>
+                <RectangleGeometry  x:Key="clip0_1102_35" Rect="0, 0, 230.548, 204"/>
             </Canvas.Resources>
             <!--Unknown tag: sodipodi:namedview-->
-            <Canvas Name="g10" Clip="{StaticResource clip0_1078_28}">
+            <Canvas Name="g10" Clip="{StaticResource clip0_1102_35}">
                 <Path  Name="path2" Fill="#FF808080">
                     <Path.Data>
-                        <PathGeometry Figures="M45.536 3.48976H57.3752C57.3752 3.48976 57.3752 3.48976 57.3752 4.40048C57.3753 5.31119 49.1788 15.329 47.3573 12.5969C45.5359 9.86476 43.7146 3.48976 45.536 3.48976Z" FillRule="NonZero"/>
+                        <PathGeometry Figures="M113.979 151.356L120.296 145.121C124.011 141.453 124.031 135.462 120.339 131.77L108.216 119.647L87.4471 98.878C85.6824 97.1132 83.2889 96.1218 80.7931 96.1218H2.20781C0.988468 96.1218 0 97.1103 0 98.3296C0 98.8922 0.21477 99.4336 0.600447 99.8431L8.14991 107.861C8.63808 108.379 8.90992 109.064 8.90992 109.776V122.64C8.90992 124.184 10.1611 125.435 11.7044 125.435H22.9804C23.8043 125.435 24.5862 125.798 25.1172 126.428L51.5672 157.809C51.992 158.313 52.225 158.951 52.225 159.61V171.863C52.225 173.406 53.4761 174.658 55.0195 174.658H67.7813C69.3246 174.658 70.5758 175.909 70.5758 177.452V194.928C70.5758 200.125 74.7888 204.338 79.9859 204.338H98.8061C104.003 204.338 108.216 200.125 108.216 194.928V171.403V164.156C108.216 162.732 108.539 161.327 109.161 160.046L112.124 153.943C112.591 152.982 113.218 152.107 113.979 151.356Z" FillRule="NonZero"/>
                     </Path.Data>
                 </Path>
-                <Path  Name="path4" Fill="#FF808080">
+                <Path  Name="path4" StrokeThickness="23.5253" Stroke="#FF808080">
                     <Path.Data>
-                        <PathGeometry Figures="M51.4955 18.1867L51.4957 18.1869L51.4957 18.1869C62.5022 33.0131 75.3907 50.3744 80.9459 71.2781C86.8697 93.5686 84.5134 120.582 58.7862 152.897L58.4349 152.546L45.8962 140.007C44.8308 138.942 43.3859 138.343 41.8792 138.343H5.69211C0.800076 138.343 -1.80441 144.115 1.43226 147.783L34.2896 185.021C35.2054 186.059 35.7108 187.396 35.7108 188.78V197.994C35.7108 201.131 38.2543 203.675 41.3918 203.675H52.7539C55.8914 203.675 58.4349 201.131 58.4349 197.994V183.791V179.416C58.4349 178.557 58.6299 177.709 59.0053 176.935L60.7941 173.251C61.0759 172.67 61.4546 172.142 61.9138 171.689L65.7274 167.925C66.5909 167.072 67.1238 166.012 67.3255 164.903C97.9306 128.105 102.07 95.4678 94.672 67.6303C88.3575 43.8694 73.6649 24.151 62.743 9.49303C61.1733 7.38641 59.6815 5.38431 58.3036 3.48976L46.8175 11.8433C48.3174 13.9057 49.8863 16.0191 51.4955 18.1867Z" FillRule="EvenOdd"/>
+                        <PathGeometry Figures="M151.75 2.79452C150.306 38.1434 153.157 98.9407 81.1855 140.562" FillRule="NonZero"/>
                     </Path.Data>
                 </Path>
-                <Path  Name="path6" StrokeThickness="1.22399" Stroke="#FF292929">
+                <Path Name="path6" StrokeThickness="2.03171" Stroke="#FF292929">
                     <Path.Data>
-                        <PathGeometry Figures="M69.1662 157.391L64.1054 148.955L74.2275 148.955L70.8532 140.52L80.9756 140.52L75.9145 132.085L86.0366 130.398L79.2886 123.65L89.4106 121.963L82.6624 115.215L92.7847 111.841L84.3496 106.78L94.4717 103.406L86.0366 96.6581L94.4717 93.284L86.0366 88.223L94.4717 83.1619L86.0366 79.7879L92.7846 74.7269L84.3496 71.3528L91.0976 64.6048L80.9756 62.9178L87.7236 56.1697L77.6015 56.1697L84.3496 49.4217L74.2275 47.7347L80.9756 40.9866L70.8535 39.2996L75.9145 32.5515L65.7924 32.5516L72.5403 25.8035L62.4184 25.8035L65.7924 17.3685L55.6704 19.0555L60.7314 10.6204L50.089 10.7755L57.3747 4.40048" FillRule="NonZero"/>
+                        <PathGeometry Figures="M112.056 130.214L104.057 117.587L121.619 117.835L116.165 103.479L133.728 103.726L125.348 89.3287L142.99 86.7218L131.602 75.1376L149.245 72.5307L137.857 60.9464L155.58 55.4847L141.185 46.7139L158.907 41.2522L144.593 29.6267L159.388 24.1237L144.994 15.3529L159.869 6.99516" FillRule="NonZero"/>
                     </Path.Data>
                 </Path>
-                <Path  Name="path8" StrokeThickness="1.82143" Stroke="#FF607D8B" StrokeDashArray="3.64 3.64">
+                <Path  Name="path8" StrokeThickness="2.72586" Stroke="#FF607D8B" StrokeDashArray="5.45 5.45">
                     <Path.Data>
-                        <PathGeometry Figures="M0 3.48976H98.3571" FillRule="NonZero"/>
+                        <PathGeometry Figures="M73.5149 2.79452H230.839" FillRule="NonZero"/>
                     </Path.Data>
                 </Path>
             </Canvas>
