--- a/Prevu.Drawings/Machines/Separation/FKS_FlakesSorter.xaml
+++ b/Prevu.Drawings/Machines/Separation/FKS_FlakesSorter.xaml
@@ -6,61 +6,61 @@
              xmlns:local="clr-namespace:Prevu.Drawings.Machines.Separation"
              mc:Ignorable="d" 
              >
-    <Viewbox  Stretch="Uniform">
-        <Canvas Name="svg29" Width="96" Height="96">
+    <Viewbox Stretch="Uniform">
+        <Canvas Name="svg29" Width="124" Height="124">
             <Canvas.Resources>
-                <RectangleGeometry  x:Key="clip0_1060_69" Rect="0, 0, 95.4, 96"/>
+                <RectangleGeometry   x:Key="clip0_1108_52" Rect="0, 0, 123.225, 124"/>
             </Canvas.Resources>
             <!--Unknown tag: sodipodi:namedview-->
-            <Canvas Name="g22" Clip="{StaticResource clip0_1060_69}">
-                <Path  Name="path2" Fill="#FF808080">
+            <Canvas Name="g22" Clip="{StaticResource clip0_1108_52}">
+                <Path   Name="path2" Fill="#FF808080">
                     <Path.Data>
-                        <PathGeometry Figures="M93.9219 96H44.2543H1.47805C0.661745 96 0 95.3382 0 94.5219L5.29137e-06 50.678C5.38667e-06 49.8617 0.66175 49.2 1.47805 49.2H93.922C94.7383 49.2 95.4 49.8617 95.4 50.678L95.4 94.5219C95.4 95.3383 94.7382 96 93.9219 96Z" FillRule="NonZero"/>
+                        <PathGeometry Figures="M121.316 124H57.1618H1.90915C0.854754 124 0 123.145 0 122.091L6.83468e-06 65.4591C6.95778e-06 64.4047 0.854761 63.55 1.90915 63.55H121.316C122.37 63.55 123.225 64.4047 123.225 65.4591L123.225 122.091C123.225 123.145 122.37 124 121.316 124Z" FillRule="NonZero"/>
                     </Path.Data>
                 </Path>
-                <Path  Name="path4" Fill="#FF808080">
+                <Path   Name="path4" Fill="#FF808080">
                     <Path.Data>
-                        <PathGeometry Figures="M11.3814 48.4929L4.30583 32.7851C4.23604 32.6301 4.19995 32.4621 4.19995 32.2922V1.2C4.19995 0.537261 4.73721 0 5.39995 0H40.2C40.8627 0 41.4 0.537261 41.4 1.2V32.2841C41.4 32.4592 41.3616 32.6323 41.2876 32.791L33.963 48.5069C33.7659 48.9297 33.3417 49.2 32.8753 49.2H12.4755C12.0035 49.2 11.5753 48.9232 11.3814 48.4929Z" FillRule="NonZero"/>
+                        <PathGeometry Figures="M11.7009 62.6366L2.56156 42.3474C2.47142 42.1472 2.4248 41.9303 2.4248 41.7108V1.55C2.4248 0.693959 3.11876 0 3.9748 0H48.9248C49.7808 0 50.4748 0.693959 50.4748 1.55V41.7003C50.4748 41.9265 50.4253 42.15 50.3297 42.3551L40.8687 62.6548C40.6142 63.2009 40.0663 63.55 39.4638 63.55H13.1141C12.5044 63.55 11.9513 63.1925 11.7009 62.6366Z" FillRule="NonZero"/>
                     </Path.Data>
                 </Path>
-                <Path  Name="path6" Fill="#FF808080">
+                <Path   Name="path6" Fill="#FF808080">
                     <Path.Data>
-                        <PathGeometry Figures="M61.1815 48.4929L54.1059 32.7851C54.0361 32.6301 54 32.4621 54 32.2922V1.2C54 0.537261 54.5373 0 55.2 0H90C90.6627 0 91.2 0.537261 91.2 1.2V32.2841C91.2 32.4592 91.1617 32.6323 91.0877 32.791L83.763 48.5069C83.566 48.9297 83.1418 49.2 82.6753 49.2H62.2756C61.8035 49.2 61.3753 48.9232 61.1815 48.4929Z" FillRule="NonZero"/>
+                        <PathGeometry Figures="M82.0261 62.6366L72.8868 42.3474C72.7966 42.1472 72.75 41.9303 72.75 41.7108V1.55C72.75 0.693959 73.444 0 74.3 0H119.25C120.106 0 120.8 0.693959 120.8 1.55V41.7003C120.8 41.9265 120.75 42.15 120.655 42.3551L111.194 62.6548C110.939 63.2009 110.391 63.55 109.789 63.55H83.4393C82.8296 63.55 82.2765 63.1925 82.0261 62.6366Z" FillRule="NonZero"/>
                     </Path.Data>
                 </Path>
-                <Path  Name="path8" Fill="#FF4C4C4C">
+                <Path   Name="path8" Fill="#FF4C4C4C">
                     <Path.Data>
-                        <PathGeometry Figures="M13.5538 54.6H32.1615V90H22.1769V68.6692L17.1846 90H7.19995L13.5538 54.6Z" FillRule="NonZero"/>
+                        <PathGeometry Figures="M17.5071 70.525H41.542V116.25H28.6452V88.6977L22.1968 116.25H9.30005L17.5071 70.525Z" FillRule="NonZero"/>
                     </Path.Data>
                 </Path>
-                <Path  Name="path10" Fill="#FF4C4C4C">
+                <Path   Name="path10" Fill="#FF4C4C4C">
                     <Path.Data>
-                        <PathGeometry Figures="M80.986 54.6H62.3783V90H72.3629V68.6692L77.3552 90H87.3398L80.986 54.6Z" FillRule="NonZero"/>
+                        <PathGeometry Figures="M104.607 70.525H80.572V116.25H93.4688V88.6977L99.9172 116.25H112.814L104.607 70.525Z" FillRule="NonZero"/>
                     </Path.Data>
                 </Path>
-                <Path  Name="path12" StrokeThickness="0.769231" Stroke="#FF292929">
+                <Path   Name="path12" StrokeThickness="0.99359" Stroke="#FF292929">
                     <Path.Data>
-                        <PathGeometry Figures="M26.9539 66.8308H31.1846M43.4923 66.8308H42.3385M31.1846 66.8308L28.4923 65.6769L30.8 64.5231L28.8769 63.3692M31.1846 66.8308H42.3385M42.3385 66.8308L39.6462 65.6769L41.9539 64.5231L39.6462 63.7538L41.9539 62.6M26.9539 63.3692L43.4923 62.6V61.4461L26.9539 63.3692Z" FillRule="NonZero"/>
+                        <PathGeometry Figures="M34.8152 86.323H40.2799M56.1774 86.323H54.687M40.2799 86.323L36.8024 84.8327L39.7831 83.3423L37.2992 81.8519M40.2799 86.323H54.687M54.687 86.323L51.2094 84.8327L54.1902 83.3423L51.2094 82.3487L54.1902 80.8583M34.8152 81.8519L56.1774 80.8583V79.3679L34.8152 81.8519Z" FillRule="NonZero"/>
                     </Path.Data>
                 </Path>
-                <Path  Name="path14" StrokeThickness="0.769231" Stroke="#FF292929">
+                <Path   Name="path14" StrokeThickness="0.99359" Stroke="#FF292929">
                     <Path.Data>
-                        <PathGeometry Figures="M68.4153 66.8308H64.1845M51.8768 66.8308H53.0307M64.1845 66.8308L66.8768 65.6769L64.5691 64.5231L66.4922 63.3692M64.1845 66.8308H53.0307M53.0307 66.8308L55.723 65.6769L53.4153 64.5231L55.723 63.7538L53.4153 62.6M68.4153 63.3692L51.8768 62.6V61.4461L68.4153 63.3692Z" FillRule="NonZero"/>
+                        <PathGeometry Figures="M88.3696 86.323H82.9049M67.0074 86.323H68.4978M82.9049 86.323L86.3824 84.8327L83.4017 83.3423L85.8857 81.8519M82.9049 86.323H68.4978M68.4978 86.323L71.9754 84.8327L68.9946 83.3423L71.9754 82.3487L68.9946 80.8583M88.3696 81.8519L67.0074 80.8583V79.3679L88.3696 81.8519Z" FillRule="NonZero"/>
                     </Path.Data>
                 </Path>
-                <Path  Name="path16" Fill="#FF616161">
+                <Path   Name="path16" Fill="#FF616161">
                     <Path.Data>
-                        <PathGeometry Figures="M41.4 32.4H4.19995L11.7 49.2H33.1215C33.595 49.2 34.0243 48.9216 34.2173 48.4892L41.4 32.4Z" FillRule="NonZero"/>
+                        <PathGeometry Figures="M50.4748 41.85H2.4248L12.1123 63.55H39.7818C40.3934 63.55 40.9479 63.1904 41.1972 62.6319L50.4748 41.85Z" FillRule="NonZero"/>
                     </Path.Data>
                 </Path>
-                <Path  Name="path18" Fill="#FF616161">
+                <Path   Name="path18" Fill="#FF616161">
                     <Path.Data>
-                        <PathGeometry Figures="M91.2 32.4H54L61.5 49.2H82.9216C83.3951 49.2 83.8243 48.9216 84.0173 48.4892L91.2 32.4Z" FillRule="NonZero"/>
+                        <PathGeometry Figures="M120.8 41.85H72.75L82.4375 63.55H110.107C110.719 63.55 111.273 63.1904 111.522 62.6319L120.8 41.85Z" FillRule="NonZero"/>
                     </Path.Data>
                 </Path>
-                <Path  Name="path20" StrokeThickness="0.3" Stroke="#FF616161">
+                <Path   Name="path20" StrokeThickness="0.3875" Stroke="#FF616161">
                     <Path.Data>
-                        <PathGeometry Figures="M47.7 96V49.2" FillRule="NonZero"/>
+                        <PathGeometry Figures="M61.6125 124V63.55" FillRule="NonZero"/>
                     </Path.Data>
                 </Path>
             </Canvas>
