--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/D883.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/D883.xaml
@@ -9,17 +9,17 @@
              xmlns:Separation="clr-namespace:Prevu.Drawings.Machines.Separation;assembly=Prevu.Drawings" xmlns:Screws="clr-namespace:Prevu.Drawings.Machines.Screws;assembly=Prevu.Drawings" x:Class="Prevu.Synoptics.D883" 
              mc:Ignorable="d" 
              Height="600" Width="600" d:Background="{DynamicResource MaterialDesignPaper}">
-    <Grid>
-        <Screws:DETAIL_SCW_Flex_Verticale HorizontalAlignment="Center" Margin="0,82,0,38" Width="254"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" Margin="148,406,0,0" VerticalAlignment="Top" ComponentName="883-61-LEV" SignalName="LSH" FlowDirection="RightToLeft"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" Margin="216,484,0,0" VerticalAlignment="Top" ComponentName="883-61-LEV" SignalName="LSL" FlowDirection="RightToLeft" />
+    <Grid d:IsLocked="True">
+        <Screws:DETAIL_SCW_Flex_Verticale HorizontalAlignment="Left" Margin="100,132,0,116" Width="434" d:IsLocked="True"/>
+        <Labels:SignalLabel HorizontalAlignment="Left" Margin="94,317,0,0" VerticalAlignment="Top" ComponentName="883-61-LEV" SignalName="LSH" FlowDirection="RightToLeft" d:IsLocked="True"/>
+        <Labels:SignalLabel HorizontalAlignment="Left" Margin="174,402,0,0" VerticalAlignment="Top" ComponentName="883-61-LEV" SignalName="LSL" FlowDirection="RightToLeft" d:IsLocked="True" />
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-         Margin="331,498,0,0" 
+         Margin="317,414,0,0" 
          VerticalAlignment="Top" 
-         ComponentName="883-61-LEV"/>
+         ComponentName="883-61-LEV" d:IsLocked="True"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="193,27,0,0" 
+            Margin="263,77,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="883-01-MA1"/>
+            ComponentName="883-01-MA1" d:IsLocked="True"/>
     </Grid>
 </UserControl>
