--- a/Prevu.Synoptics.V2932_Infinya/SHsmall.xaml
+++ b/Prevu.Synoptics.V2932_Infinya/SHsmall.xaml
@@ -45,7 +45,7 @@
 				</TransformGroup>
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
-		<Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="518,209,0,0" VerticalAlignment="Top" Width="117" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="190-01-MA1">
+		<Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="518,249,0,0" VerticalAlignment="Top" Width="117" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="190-01-MA1">
 			<Labels:Pipe.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform/>
@@ -55,7 +55,7 @@
 				</TransformGroup>
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
-		<Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="586,248,0,0" VerticalAlignment="Top" Width="88" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="190-01-MA1">
+		<Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="586,288,0,0" VerticalAlignment="Top" Width="88" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="190-01-MA1">
 			<Labels:Pipe.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform/>
@@ -65,7 +65,7 @@
 				</TransformGroup>
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
-		<Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="687,299,0,0" VerticalAlignment="Top" Width="118" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="190-71-ECS1">
+		<Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="687,339,0,0" VerticalAlignment="Top" Width="118" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="190-71-ECS1">
 			<Labels:Pipe.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform/>
@@ -139,7 +139,7 @@
 		</Machines:CV_Valve>
 		<Border BorderThickness="1" HorizontalAlignment="Left" Height="145" Margin="26,345,0,0" VerticalAlignment="Top" Width="220" Background="Gray" CornerRadius="15,15,15,15"/>
 		<Machines:EXC_HeatExchanger HorizontalAlignment="Left" Margin="274,395,0,0" VerticalAlignment="Top" Height="46" Width="46"/>
-		<Machines:NT_ConveyorBelt HorizontalAlignment="Left" Margin="615,259,0,0" VerticalAlignment="Top" Width="149" RenderTransformOrigin="0.5,0.5">
+		<Machines:NT_ConveyorBelt HorizontalAlignment="Left" Margin="615,299,0,0" VerticalAlignment="Top" Width="149" RenderTransformOrigin="0.5,0.5">
 			<Machines:NT_ConveyorBelt.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform/>
@@ -151,7 +151,7 @@
 		</Machines:NT_ConveyorBelt>
 		<Machines:Radar HorizontalAlignment="Left" Margin="522,103,0,0" VerticalAlignment="Top" Height="45" Width="45"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" Height="50" Margin="449,255,0,0" VerticalAlignment="Top" Width="90" ComponentName="190-01-MA1"/>
-		<Labels:DeviceLabel HorizontalAlignment="Left" Height="50" Margin="634,132,0,0" VerticalAlignment="Top" Width="90" ComponentName="190-71-ECS1"/>
+		<Labels:DeviceLabel HorizontalAlignment="Left" Height="50" Margin="634,173,0,0" VerticalAlignment="Top" Width="90" ComponentName="190-71-ECS1"/>
 		<Rectangle HorizontalAlignment="Left" Height="110" Margin="190,36,0,0" Stroke="Black" VerticalAlignment="Top" Width="2" StrokeThickness="2"/>
 		<Machines:External HorizontalAlignment="Left" Height="70" Margin="153,12,0,0" VerticalAlignment="Top" Width="76"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" Height="50" Margin="325,365,0,0" VerticalAlignment="Top" Width="90" ComponentName="190-02-MA1"/>
@@ -166,8 +166,8 @@
 		<Labels:DeviceLabel HorizontalAlignment="Left" Margin="217,23,0,0" VerticalAlignment="Top" ComponentName="190-71-ECS2"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" Height="50" Margin="500,45,0,0" VerticalAlignment="Top" Width="90" ComponentName="190-41-LT1"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" Height="50" Margin="634,45,0,0" VerticalAlignment="Top" Width="90" ComponentName="190-SHREDDER"/>
-		<Rectangle HorizontalAlignment="Left" Height="137" Margin="605,131,0,0" Stroke="Black" VerticalAlignment="Top" Width="2" StrokeThickness="2"/>
-		<Machines:External HorizontalAlignment="Left" Height="70" Margin="568,122,0,0" VerticalAlignment="Top" Width="76"/>
+		<Rectangle HorizontalAlignment="Left" Height="136" Margin="605,0,0,0" Stroke="Black" VerticalAlignment="Center" Width="2" StrokeThickness="2"/>
+		<Machines:External HorizontalAlignment="Left" Height="70" Margin="568,162,0,0" VerticalAlignment="Top" Width="76"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" Height="50" Margin="447,365,0,0" VerticalAlignment="Top" Width="90" ComponentName="190-01-YA1"/>
 		<Machines:MaterialInletOutlet HorizontalAlignment="Left" Margin="19,11,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="77" Width="77">
 			<Machines:MaterialInletOutlet.RenderTransform>
@@ -191,7 +191,7 @@
 				</TransformGroup>
 			</Machines:CV_Valve.RenderTransform>
 		</Machines:CV_Valve>
-		<Machines:MaterialInletOutlet HorizontalAlignment="Left" Margin="709,331,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="77" Width="77">
+		<Machines:MaterialInletOutlet HorizontalAlignment="Left" Margin="709,371,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="77" Width="77">
 			<Machines:MaterialInletOutlet.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform/>
