--- a/Prevu.Synoptics.V2451_Biffa/PlantView.xaml
+++ b/Prevu.Synoptics.V2451_Biffa/PlantView.xaml
@@ -13,22 +13,21 @@
 	<Grid Width="1700" Height="840" VerticalAlignment="Top" HorizontalAlignment="Left">
 		<Rectangle HorizontalAlignment="Left" Height="645" Margin="450,120,0,0" Stroke="Black" VerticalAlignment="Top" Width="825" RadiusX="15" RadiusY="15" StrokeThickness="6" StrokeDashArray="2 2" d:IsLocked="True"/>
 
-		<Labels:DeviceLabel x:Name="Q11" HorizontalAlignment="Left" Margin="802,201,0,0" VerticalAlignment="Top" ComponentName="Q11"/>
-		<Labels:DeviceLabel x:Name="S110" HorizontalAlignment="Left" Margin="742,430,0,0" VerticalAlignment="Top" ComponentName="S110"/>
-		<Machines:QX_ElectricalCabinet Margin="743,276,749,428" Height="Auto" Width="Auto"/>
-		<Machines:QX_HMI HorizontalAlignment="Left" Margin="1062,276,0,0" VerticalAlignment="Top" Height="136" Width="125"/>
-		<Labels:DeviceLabel x:Name="HMI_01" HorizontalAlignment="Left" Margin="1079,201,0,0" VerticalAlignment="Top" ComponentName="HMI-01"/>
-		<Labels:DeviceLabel x:Name="Q21_Copy" HorizontalAlignment="Left" Margin="522,202,0,0" VerticalAlignment="Top" ComponentName="Q01"/>
+		<Labels:DeviceLabel x:Name="Q51" HorizontalAlignment="Left" Margin="712,210,0,0" VerticalAlignment="Top" ComponentName="Q51"/>
+		<Labels:DeviceLabel x:Name="S110" HorizontalAlignment="Left" Margin="636,429,0,0" VerticalAlignment="Top" ComponentName="S110"/>
+		<Machines:QX_HMI HorizontalAlignment="Left" Margin="1060,270,0,0" VerticalAlignment="Top" Height="136" Width="125"/>
+		<Labels:DeviceLabel x:Name="HMI_01" HorizontalAlignment="Left" Margin="1077,210,0,0" VerticalAlignment="Top" ComponentName="HMI-01"/>
+		<Labels:DeviceLabel x:Name="Q21_Copy" HorizontalAlignment="Left" Margin="712,155,0,0" VerticalAlignment="Top" ComponentName="Q01"/>
 		<Rectangle HorizontalAlignment="Left" Height="1913" Margin="1748,37,0,0" Stroke="Black" VerticalAlignment="Top" Width="1"/>
-		<Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" Margin="510,276,0,0" VerticalAlignment="Top" Width="114" Height="136"/>
-		<Labels:GroupLabel HorizontalAlignment="Left" Margin="755,525,0,0" VerticalAlignment="Top" GroupName="CH"/>
-		<Labels:GroupLabel HorizontalAlignment="Left" Margin="847,525,0,0" VerticalAlignment="Top" GroupName="ST1"/>
-		<Labels:GroupLabel HorizontalAlignment="Left" Margin="912,525,0,0" VerticalAlignment="Top" GroupName="WH1"/>
-		<Labels:GroupLabel HorizontalAlignment="Left" Margin="912,595,0,0" VerticalAlignment="Top" GroupName="WH2"/>
-		<Labels:GroupLabel HorizontalAlignment="Left" Margin="912,665,0,0" VerticalAlignment="Top" GroupName="WH3"/>
+		<Labels:GroupLabel HorizontalAlignment="Left" Margin="648,524,0,0" VerticalAlignment="Top" GroupName="CH"/>
+		<Labels:GroupLabel HorizontalAlignment="Left" Margin="769,524,0,0" VerticalAlignment="Top" GroupName="WH1"/>
+		<Labels:GroupLabel HorizontalAlignment="Left" Margin="834,524,0,0" VerticalAlignment="Top" GroupName="WH2"/>
+		<Labels:GroupLabel HorizontalAlignment="Left" Margin="834,594,0,0" VerticalAlignment="Top" GroupName="WH3"/>
 		<Labels:DeviceLabel x:Name="Q21_Copy1" HorizontalAlignment="Left" Margin="347,120,0,0" VerticalAlignment="Top" ComponentName="ESTOP-AREA-01"/>
-		<Labels:DeviceLabel x:Name="S110_Copy" HorizontalAlignment="Left" Margin="867,431,0,0" VerticalAlignment="Top" ComponentName="S110"/>
-		<Labels:GroupLabel HorizontalAlignment="Left" Margin="847,595,0,0" VerticalAlignment="Top" GroupName="ST2"/>
+		<Labels:DeviceLabel x:Name="S110_Copy" HorizontalAlignment="Left" Margin="789,430,0,0" VerticalAlignment="Top" ComponentName="S110"/>
+		<Labels:GroupLabel HorizontalAlignment="Left" Margin="769,594,0,0" VerticalAlignment="Top" GroupName="ST"/>
+		<Machines:QX_LongElectricalCabinet HorizontalAlignment="Left" Margin="558,270,0,0" VerticalAlignment="Top" Height="135
+																			 " Width="395"/>
 
 	</Grid>
 </UserControl>
