--- a/Prevu.Synoptics.V2451_Biffa/ST.xaml
+++ b/Prevu.Synoptics.V2451_Biffa/ST.xaml
@@ -8,7 +8,7 @@
              x:Class="Prevu.Synoptics.ST" mc:Ignorable="d"
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
 	<Grid>
-		<Labels:Pipe HorizontalAlignment="Left" Margin="771,575,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="94" StatusComponent="810-01-MA1" PipeHeight="Medium">
+		<Labels:Pipe HorizontalAlignment="Left" Margin="816,575,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="94" StatusComponent="810-01-MA1" PipeHeight="Medium">
 			<Labels:Pipe.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform/>
@@ -18,7 +18,7 @@
 				</TransformGroup>
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
-		<Labels:Pipe HorizontalAlignment="Left" Margin="752,318,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="132" StatusComponent="480-01-MA1" PipeHeight="Medium">
+		<Labels:Pipe HorizontalAlignment="Left" Margin="756,318,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="132" StatusComponent="480-01-MA1" PipeHeight="Medium">
 			<Labels:Pipe.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform/>
@@ -28,9 +28,9 @@
 				</TransformGroup>
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
-		<Machines:Storage_silo HorizontalAlignment="Left" Margin="754,363,0,0" VerticalAlignment="Top" Height="186" Width="128"/>
-		<Machines:Radar HorizontalAlignment="Left" Margin="838,340,0,0" VerticalAlignment="Top" Height="49" Width="30"/>
-		<Labels:Pipe HorizontalAlignment="Left" Margin="863,661,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="70" StatusComponent="812-01-MA1" PipeHeight="Medium">
+		<Machines:Storage_silo HorizontalAlignment="Left" Margin="759,284,0,0" VerticalAlignment="Top" Height="303" Width="208"/>
+		<Machines:Radar HorizontalAlignment="Left" Margin="907,268,0,0" VerticalAlignment="Top" Height="49" Width="30"/>
+		<Labels:Pipe HorizontalAlignment="Left" Margin="958,602,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="154" StatusComponent="812-01-MA1" PipeHeight="Medium">
 			<Labels:Pipe.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform/>
@@ -40,15 +40,15 @@
 				</TransformGroup>
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
-		<Labels:Pipe HorizontalAlignment="Left" Margin="756,256,0,0" VerticalAlignment="Top" Width="67" StatusComponent="480-01-MA1" PipeHeight="Medium"/>
+		<Labels:Pipe HorizontalAlignment="Left" Margin="715,256,0,0" VerticalAlignment="Top" Width="110" StatusComponent="480-01-MA1" PipeHeight="Medium"/>
 		<Labels:Pipe HorizontalAlignment="Left" Margin="215,297,0,0" VerticalAlignment="Top" Width="111" StatusComponent="463-01-MA1" PipeHeight="Medium"/>
 		<Labels:JumpLabel HorizontalAlignment="Left" 
           Margin="141,267,0,0" 
           VerticalAlignment="Top" 
           JumpFromLabel="478-01-MA1" 
           JumpToLabel="463-01-MA1"/>
-		<Rectangle HorizontalAlignment="Left" Height="2" Margin="878,699,0,0" Stroke="Black" VerticalAlignment="Top" Width="129"/>
-		<Machines:External HorizontalAlignment="Left" Margin="1001,669,0,0" VerticalAlignment="Top" Height="61" Width="57" RenderTransformOrigin="0.5,0.5">
+		<Rectangle HorizontalAlignment="Left" Height="2" Margin="1005,683,0,0" Stroke="Black" VerticalAlignment="Top" Width="129"/>
+		<Machines:External HorizontalAlignment="Left" Margin="1128,653,0,0" VerticalAlignment="Top" Height="61" Width="57" RenderTransformOrigin="0.5,0.5">
 			<Machines:External.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform/>
@@ -58,7 +58,7 @@
 				</TransformGroup>
 			</Machines:External.RenderTransform>
 		</Machines:External>
-		<Labels:Pipe HorizontalAlignment="Left" Margin="496,244,0,0" VerticalAlignment="Top" Width="214" StatusComponent="480-01-MA1" PipeHeight="Medium"/>
+		<Labels:Pipe HorizontalAlignment="Left" Margin="496,244,0,0" VerticalAlignment="Top" Width="164" StatusComponent="480-01-MA1" PipeHeight="Medium"/>
 		<Labels:Pipe HorizontalAlignment="Left" Margin="294,321,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="58" StatusComponent="463-01-MA1" PipeHeight="Medium">
 			<Labels:Pipe.RenderTransform>
 				<TransformGroup>
@@ -69,7 +69,7 @@
 				</TransformGroup>
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
-		<Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="697,207,0,0" VerticalAlignment="Top" Height="69" Width="68"/>
+		<Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="656,207,0,0" VerticalAlignment="Top" Height="69" Width="68"/>
 		<Labels:Pipe HorizontalAlignment="Left" Margin="450,358,0,0" VerticalAlignment="Top" Color="Water" Width="88" StatusComponent="450-21-CV1"/>
 		<Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="507,310,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539">
 			<Machines:CV_Valve_001.RenderTransform>
@@ -92,12 +92,12 @@
 			</Machines:SCW_ScrewConveyor_straight.RenderTransform>
 		</Machines:SCW_ScrewConveyor_straight>
 		<Machines:DCE_DryingCentrifuge HorizontalAlignment="Left" Margin="396,231,0,0" VerticalAlignment="Top" Height="139" Width="110"/>
-		<Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Left" Margin="797,625,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="118">
+		<Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Left" Margin="841,571,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="214">
 			<Machines:SCW_ScrewConveyor_straight.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform/>
 					<SkewTransform/>
-					<RotateTransform Angle="0"/>
+					<RotateTransform Angle="-30"/>
 					<TranslateTransform/>
 				</TransformGroup>
 			</Machines:SCW_ScrewConveyor_straight.RenderTransform>
@@ -107,21 +107,21 @@
           VerticalAlignment="Top" 
           ComponentName="480-01-MA1"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="687,610,0,0" 
+            Margin="805,650,0,0" 
             VerticalAlignment="Top" 
             ComponentName="812-01-MA1"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="892,307,0,0" 
+            Margin="877,214,0,0" 
             VerticalAlignment="Top" 
             ComponentName="810-41-LT1"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="773,406,0,0" 
-            VerticalAlignment="Top" 
+            Margin="818,0,0,0" 
+            VerticalAlignment="Center" 
             ComponentName="810-01-MA1"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="687,277,0,0" 
+            Margin="641,157,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="482-01-MA1" Loaded="DeviceLabel_Loaded_1"/>
+            ComponentName="482-01-MA1" />
 		<Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="294,382,0,0" 
             VerticalAlignment="Top" 
@@ -129,13 +129,13 @@
 		<Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="508,382,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="480-21-CV1" Loaded="DeviceLabel_Loaded"/>
+            ComponentName="480-21-CV1" />
 		<Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="985,628,0,0" 
+            Margin="1112,612,0,0" 
             VerticalAlignment="Top" 
             ComponentName="812-71-PC1"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" 
-		Margin="892,374,0,0" 
+		Margin="965,320,0,0" 
 		VerticalAlignment="Top" 
 		ComponentName="810-01-SILO"/>
 	</Grid>
