--- a/Prevu.Synoptics.V2451_Biffa/WH3.xaml
+++ b/Prevu.Synoptics.V2451_Biffa/WH3.xaml
@@ -19,7 +19,7 @@
 				</TransformGroup>
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
-		<Labels:Pipe HorizontalAlignment="Left" Margin="226,457,0,0" VerticalAlignment="Top" Width="104" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1">
+		<Labels:Pipe HorizontalAlignment="Left" Margin="226,457,0,0" VerticalAlignment="Top" Width="104" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV3">
 			<Labels:Pipe.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform/>
@@ -29,17 +29,7 @@
 				</TransformGroup>
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
-		<Labels:Pipe HorizontalAlignment="Left" Margin="246,273,0,0" VerticalAlignment="Top" Width="48" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV2">
-			<Labels:Pipe.RenderTransform>
-				<TransformGroup>
-					<ScaleTransform/>
-					<SkewTransform/>
-					<RotateTransform Angle="90"/>
-					<TranslateTransform/>
-				</TransformGroup>
-			</Labels:Pipe.RenderTransform>
-		</Labels:Pipe>
-		<Labels:Pipe HorizontalAlignment="Left" Margin="232,243,0,0" VerticalAlignment="Top" Width="110" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1">
+		<Labels:Pipe HorizontalAlignment="Left" Margin="241,261,0,0" VerticalAlignment="Top" Width="74" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1">
 			<Labels:Pipe.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform/>
@@ -50,8 +40,8 @@
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
 		<Machines:Chemical_dosing HorizontalAlignment="Left" Margin="207,295,0,0" VerticalAlignment="Top" Height="130" Width="144"/>
-		<Labels:Pipe HorizontalAlignment="Left" Margin="216,185,0,0" VerticalAlignment="Top" Width="73" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="371-21-CV1" Height="13"/>
-		<Machines:WaterPump HorizontalAlignment="Left" Margin="191,158,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Chemicals">
+		<Labels:Pipe HorizontalAlignment="Left" Margin="207,221,0,0" VerticalAlignment="Top" Width="73" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="371-21-CV1" Height="13"/>
+		<Machines:WaterPump HorizontalAlignment="Left" Margin="191,194,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Chemicals">
 			<Machines:WaterPump.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform ScaleX="1"/>
@@ -61,8 +51,8 @@
 				</TransformGroup>
 			</Machines:WaterPump.RenderTransform>
 		</Machines:WaterPump>
-		<Labels:Pipe HorizontalAlignment="Left" Margin="207,247,0,0" VerticalAlignment="Top" Width="65" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="371-21-CV2" Height="11"/>
-		<Machines:WaterPump HorizontalAlignment="Left" Margin="190,218,0,0" VerticalAlignment="Top" Height="71" Width="53" RenderTransformOrigin="0.5,0.5" Color="Chemicals">
+		<Labels:Pipe HorizontalAlignment="Left" Margin="200,667,0,0" VerticalAlignment="Top" Width="170" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="371-21-CV2" Height="25"/>
+		<Machines:WaterPump HorizontalAlignment="Left" Margin="183,645,0,0" VerticalAlignment="Top" Height="71" Width="53" RenderTransformOrigin="0.5,0.5" Color="Chemicals">
 			<Machines:WaterPump.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform ScaleX="1"/>
@@ -72,24 +62,25 @@
 				</TransformGroup>
 			</Machines:WaterPump.RenderTransform>
 		</Machines:WaterPump>
-		<Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="261,119,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539">
+		<Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="276,144,0,0" VerticalAlignment="Top" Height="70" Width="70" Color="Water" RenderTransformOrigin="0.5,0.5">
 			<Machines:CV_Valve_001.RenderTransform>
 				<TransformGroup>
-					<ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
+					<ScaleTransform/>
 					<SkewTransform/>
 					<RotateTransform Angle="-90"/>
-					<TranslateTransform X="0" Y="0"/>
+					<TranslateTransform/>
 				</TransformGroup>
 			</Machines:CV_Valve_001.RenderTransform>
 		</Machines:CV_Valve_001>
-		<Labels:Pipe HorizontalAlignment="Left" Margin="275,507,0,0" VerticalAlignment="Top" Width="85" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1">
+
+		<Labels:Pipe HorizontalAlignment="Left" Margin="276,507,0,0" VerticalAlignment="Top" Width="85" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV3">
 		</Labels:Pipe>
 		<Labels:DeviceLabel HorizontalAlignment="Left" 
-				Margin="93,168,0,0" 
+				Margin="84,204,0,0" 
 				VerticalAlignment="Top" 
 				ComponentName="371-21-CV1"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" 
-				Margin="93,228,0,0" 
+				Margin="84,655,0,0" 
 				VerticalAlignment="Top" 
 				ComponentName="371-21-CV2"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" 
@@ -97,14 +88,15 @@
 				VerticalAlignment="Top" 
 				ComponentName="371-21-CV3"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" 
-				Margin="93,329,0,0" 
+				Margin="84,329,0,0" 
 				VerticalAlignment="Top" 
 				ComponentName="371-41-WT1"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" 
-				Margin="93,389,0,0" 
+				Margin="84,389,0,0" 
 				VerticalAlignment="Top" 
 				ComponentName="371-ACS" RenderTransformOrigin="0.5,0.52"/>
 		<Labels:JumpLabel HorizontalAlignment="Left" Margin="357,475,0,0" VerticalAlignment="Top" JumpFromLabel="371-21-CV1" JumpToLabel="470-41-LT1"/>
+		<Labels:JumpLabel HorizontalAlignment="Left" Margin="357,645,0,0" VerticalAlignment="Top" JumpFromLabel="371-21-CV1" JumpToLabel="470-41-LT1"/>
 
 	</Grid>
 </UserControl>
