--- a/Prevu.Synoptics.V3001-COVERIS/D520.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/D520.xaml
@@ -7,8 +7,8 @@
 						 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              mc:Ignorable="d" 
-             Height="300" Width="400" d:Background="{DynamicResource MaterialDesignPaper}">
-    <Grid>
+            d:Background="{DynamicResource MaterialDesignPaper}">
+    <Grid Height="300" Width="400" >
         <Labels:Pipe HorizontalAlignment="Left" Margin="188,40,0,0" VerticalAlignment="Top" Width="68" StatusComponent="520-27-CV1" Color="Air"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="188,110,0,0" VerticalAlignment="Top" Width="68" StatusComponent="520-27-CV2" Color="Air"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="188,180,0,0" VerticalAlignment="Top" Width="68" StatusComponent="520-27-CV3" Color="Air"/>
