--- a/Prevu.Synoptics.V3001-COVERIS/D810_2.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/D810_2.xaml
@@ -7,8 +7,8 @@
 						 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              mc:Ignorable="d" 
-             d:Background="{DynamicResource MaterialDesignPaper}" Height="425" Width="490">
-    <Grid>
+             d:Background="{DynamicResource MaterialDesignPaper}">
+    <Grid Height="425" Width="490">
         <Labels:Pipe HorizontalAlignment="Left" Margin="164,175,0,0" VerticalAlignment="Top" Color="Oil" Width="158" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="810-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
