--- a/Prevu.Synoptics.V3001-COVERIS/PlantView.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/PlantView.xaml
@@ -12,7 +12,7 @@
              mc:Ignorable="d" 
              d:Height="840" d:Width="1700" d:Background="{DynamicResource MaterialDesignPaper}">
     <Grid>
-        <Rectangle HorizontalAlignment="Center" Height="600" Stroke="Black" VerticalAlignment="Center" Width="1470" RadiusX="15" RadiusY="15" StrokeThickness="6" StrokeDashArray="2 2"/>
+        <Rectangle Height="600" Stroke="Black" Width="1470" RadiusX="15" RadiusY="15" StrokeThickness="6" StrokeDashArray="2 2"/>
 
         <Machines:QX_HMI HorizontalAlignment="Left" Margin="1410,260,0,0" VerticalAlignment="Top" Height="136" Width="125"/>
         <Machines:QX_HMI HorizontalAlignment="Left" Margin="1410,510,0,0" VerticalAlignment="Top" Height="136" Width="125"/>
@@ -35,14 +35,13 @@
         <Labels:DeviceLabel x:Name="S710" HorizontalAlignment="Left" Margin="1004,431,0,0" VerticalAlignment="Top" ComponentName="S710"/>
         <Labels:GroupLabel HorizontalAlignment="Left" Margin="981,510,0,0" VerticalAlignment="Top" GroupName="520"/>
         <Labels:GroupLabel HorizontalAlignment="Left" Margin="547,510,0,0" VerticalAlignment="Top" GroupName="230"/>
-        <Labels:GroupLabel HorizontalAlignment="Left" Margin="745,510,0,0" VerticalAlignment="Top" GroupName="330"/>
+        <Labels:GroupLabel HorizontalAlignment="Left" Margin="675,510,0,0" VerticalAlignment="Top" GroupName="330"/>
         <Labels:GroupLabel HorizontalAlignment="Left" Margin="1051,510,0,0" VerticalAlignment="Top" GroupName="810"/>
         <Labels:GroupLabel HorizontalAlignment="Left" Margin="827,510,0,0" VerticalAlignment="Top" GroupName="460"/>
         <Labels:GroupLabel HorizontalAlignment="Left" Margin="897,510,0,0" VerticalAlignment="Top" GroupName="490"/>
-        <Labels:GroupLabel HorizontalAlignment="Left" Margin="675,585,0,0" VerticalAlignment="Top" GroupName="350"/>
+        <Labels:GroupLabel HorizontalAlignment="Left" Margin="745,510,0,0" VerticalAlignment="Top" GroupName="350"/>
         <Labels:GroupLabel HorizontalAlignment="Left" Margin="745,585,0,0" VerticalAlignment="Top" GroupName="380"/>
         <Labels:GroupLabel HorizontalAlignment="Left" Margin="827,585,0,0" VerticalAlignment="Top" GroupName="514"/>
-        <Labels:GroupLabel HorizontalAlignment="Left" Margin="675,510,0,0" VerticalAlignment="Top" GroupName="230"/>
 
-    </Grid>
+	</Grid>
 </UserControl>
