--- a/Prevu.Synoptics.V3001-Coveris/D810.xaml
+++ b/Prevu.Synoptics.V3001-Coveris/D810.xaml
@@ -7,8 +7,8 @@
 						 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              mc:Ignorable="d" 
-             d:Background="{DynamicResource MaterialDesignPaper}" Height="450" MinWidth="380">
-	<Grid>
+             d:Background="{DynamicResource MaterialDesignPaper}">
+	<Grid Height="450" MinWidth="380">
 		<Machines:SLX_Silo HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="430" Width="331"/>
 		<Labels:SignalLabel HorizontalAlignment="Left" Margin="280,40,0,0" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSHA"/>
 		<Labels:SignalLabel HorizontalAlignment="Left" Margin="280,104,0,0" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSH" />
