--- a/Prevu.Synoptics.V3001-COVERIS/P230.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/P230.xaml
@@ -9,6 +9,17 @@
              x:Class="Prevu.Synoptics.P230" mc:Ignorable="d" 
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
 	<Grid Margin="-4,-5,4,5">
+		<Rectangle HorizontalAlignment="Left" Height="152" Margin="1232,627,0,0" Stroke="White" StrokeThickness="2" VerticalAlignment="Top" Width="118" RadiusX="15" RadiusY="15" d:IsLocked="True"/>
+		<Labels:Pipe HorizontalAlignment="Left" Margin="539,376,0,0" VerticalAlignment="Top" Color="Water" Width="56" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="212-22-CV1">
+			<Labels:Pipe.RenderTransform>
+				<TransformGroup>
+					<ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
+					<SkewTransform/>
+					<RotateTransform Angle="90"/>
+					<TranslateTransform/>
+				</TransformGroup>
+			</Labels:Pipe.RenderTransform>
+		</Labels:Pipe>
 		<Labels:Pipe HorizontalAlignment="Left" Margin="751,293,0,0" VerticalAlignment="Top" Width="84" StatusComponent="234-01-MA1" PipeHeight="Medium" Height="24" RenderTransformOrigin="0.5,0.5">
 			<Labels:Pipe.RenderTransform>
 				<TransformGroup>
@@ -19,7 +30,7 @@
 				</TransformGroup>
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
-		<Labels:Pipe HorizontalAlignment="Left" Margin="511,274,0,0" VerticalAlignment="Top" Color="Water" Width="119" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="212-21-CV1">
+		<Labels:Pipe HorizontalAlignment="Left" Margin="511,274,0,0" VerticalAlignment="Top" Color="Air" Width="119" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="212-21-CV1">
 			<Labels:Pipe.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -65,7 +76,6 @@
 				</TransformGroup>
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
-		<Labels:Pipe HorizontalAlignment="Left" Margin="295,439,0,0" VerticalAlignment="Top" Width="72" StatusComponent="208-01-MA1" PipeHeight="Medium" Height="22"/>
 		<Labels:Pipe HorizontalAlignment="Left" Margin="655,691,0,0" VerticalAlignment="Top" Width="106" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" PipeHeight="Medium" Height="25">
 			<Labels:Pipe.RenderTransform>
 				<TransformGroup>
@@ -106,7 +116,7 @@
 				</TransformGroup>
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
-		<Labels:Pipe HorizontalAlignment="Left" Margin="298,564,0,0" VerticalAlignment="Top" Color="Water" Width="114" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="230-21-CV1">
+		<Labels:Pipe HorizontalAlignment="Left" Margin="228,564,0,0" VerticalAlignment="Top" Color="Water" Width="114" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="230-21-CV1">
 			<Labels:Pipe.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -136,7 +146,7 @@
 				</TransformGroup>
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
-		<Labels:Pipe HorizontalAlignment="Left" Margin="511,306,0,0" VerticalAlignment="Top" Color="Water" Width="119" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="212-22-CV1">
+		<Labels:Pipe HorizontalAlignment="Left" Margin="560,403,0,0" VerticalAlignment="Top" Color="Water" Width="65" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="212-22-CV1">
 			<Labels:Pipe.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -186,16 +196,6 @@
 				</TransformGroup>
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
-		<Labels:Pipe HorizontalAlignment="Left" Margin="501,646,0,0" VerticalAlignment="Top" Width="96" StatusComponent="230-03-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10">
-			<Labels:Pipe.RenderTransform>
-				<TransformGroup>
-					<ScaleTransform/>
-					<SkewTransform/>
-					<RotateTransform Angle="90"/>
-					<TranslateTransform/>
-				</TransformGroup>
-			</Labels:Pipe.RenderTransform>
-		</Labels:Pipe>
 		<Labels:Pipe HorizontalAlignment="Left" Margin="1031,530,0,0" VerticalAlignment="Top" Width="87" RenderTransformOrigin="0.5,0.5" StatusComponent="324-01-MA1" PipeHeight="Medium" Height="22">
 			<Labels:Pipe.RenderTransform>
 				<TransformGroup>
@@ -207,7 +207,7 @@
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
 		<Labels:Pipe HorizontalAlignment="Left" Margin="938,519,0,0" VerticalAlignment="Top" Width="66" StatusComponent="322-01-MA1" PipeHeight="Medium" Height="22"/>
-		<Rectangle HorizontalAlignment="Left" Height="745" Stroke="Black" VerticalAlignment="Center" Width="642" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Margin="79,0,0,0"/>
+		<Rectangle HorizontalAlignment="Left" Height="745" Stroke="Black" VerticalAlignment="Center" Width="642" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Margin="79,0,0,0" d:IsLocked="True"/>
 		<Rectangle HorizontalAlignment="Left" Height="2" Margin="903,358,0,0" Stroke="Black" VerticalAlignment="Top" Width="62" RenderTransformOrigin="0.5,0.5">
 			<Rectangle.RenderTransform>
 				<TransformGroup>
@@ -218,8 +218,6 @@
 				</TransformGroup>
 			</Rectangle.RenderTransform>
 		</Rectangle>
-		<Rectangle HorizontalAlignment="Left" Height="152" Margin="1232,627,0,0" Stroke="White" StrokeThickness="2" VerticalAlignment="Top" Width="118" RadiusX="15" RadiusY="15"/>
-		<Rectangle HorizontalAlignment="Left" Height="26" Margin="353,437,0,0" Stroke="Gray" VerticalAlignment="Top" Width="34" Fill="Gray"/>
 		<Rectangle HorizontalAlignment="Left" Height="112" Margin="477,132,0,0" Stroke="Black" VerticalAlignment="Top" Width="2" RenderTransformOrigin="0.5,0.5">
 			<Rectangle.RenderTransform>
 				<TransformGroup>
@@ -260,8 +258,8 @@
 				</TransformGroup>
 			</Machines:MaterialInletOutlet.RenderTransform>
 		</Machines:MaterialInletOutlet>
-		<Machines:ARF_Roll_Filter HorizontalAlignment="Left" Margin="454,222,0,0" VerticalAlignment="Top" Height="108" Width="104"/>
-		<Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="232,519,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539">
+		<Machines:ARF_Roll_Filter HorizontalAlignment="Left" Margin="434,215,0,0" VerticalAlignment="Top" Height="155" Width="149"/>
+		<Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="171,519,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539">
 			<Machines:CV_Valve_001.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
@@ -271,7 +269,7 @@
 				</TransformGroup>
 			</Machines:CV_Valve_001.RenderTransform>
 		</Machines:CV_Valve_001>
-		<Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="593,265,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539">
+		<Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="593,356,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539">
 			<Machines:CV_Valve_001.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
@@ -281,7 +279,7 @@
 				</TransformGroup>
 			</Machines:CV_Valve_001.RenderTransform>
 		</Machines:CV_Valve_001>
-		<Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="593,233,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539">
+		<Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="593,233,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Air" RenderTransformOrigin="0.51,0.539">
 			<Machines:CV_Valve_001.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
@@ -293,7 +291,7 @@
 		</Machines:CV_Valve_001>
 		<Machines:EC_Filtro HorizontalAlignment="Left" Margin="983,122,0,0" VerticalAlignment="Top" Height="121" Width="105"/>
 		<Machines:EC_Metal_Detector HorizontalAlignment="Left" Margin="252,270,0,0" VerticalAlignment="Top" Height="38" Width="44"/>
-		<Machines:GR_001 HorizontalAlignment="Left" Margin="342,434,0,0" VerticalAlignment="Top" Height="161" Width="209"/>
+		<Machines:GR_001 HorizontalAlignment="Left" Margin="264,414,0,0" VerticalAlignment="Top" Height="286" Width="285"/>
 		<Machines:External HorizontalAlignment="Left" Margin="369,159,0,0" VerticalAlignment="Top" Height="58" Width="59" RenderTransformOrigin="0.5,0.5">
 			<Machines:External.RenderTransform>
 				<TransformGroup>
@@ -329,7 +327,7 @@
 				</TransformGroup>
 			</Machines:SCW_ScrewConveyor_straight.RenderTransform>
 		</Machines:SCW_ScrewConveyor_straight>
-		<Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Left" Margin="415,594,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="149" Height="44">
+		<Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Left" Margin="359,681,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="195" Height="20">
 			<Machines:SCW_ScrewConveyor_straight.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform/>
@@ -356,23 +354,23 @@
             VerticalAlignment="Top" 
             ComponentName="234-01-MA1"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="518,501,0,0" 
+            Margin="362,465,0,0" 
             VerticalAlignment="Top" 
             ComponentName="230-01-MA1"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="404,332,0,0" 
+            Margin="364,330,0,0" 
             VerticalAlignment="Top" 
             ComponentName="212-01-MA1"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="404,619,0,0" 
+            Margin="361,713,0,0" 
             VerticalAlignment="Top" 
             ComponentName="230-03-MA1"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="595,332,0,0" 
+            Margin="595,423,0,0" 
             VerticalAlignment="Top" 
             ComponentName="212-22-CV1"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="240,501,0,0" 
+            Margin="176,501,0,0" 
             VerticalAlignment="Top" 
             ComponentName="230-21-CV1"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" 
@@ -411,11 +409,19 @@
             Margin="228,128,0,0" 
             VerticalAlignment="Top" 
             ComponentName="208-71-ECS1"/>
-		<Labels:DetailsLabel HorizontalAlignment="Left" Margin="1262,713,0,0" VerticalAlignment="Top" ComponentName="099-71-EXT" DetailsPageName="D099"/>
 		<Labels:DetailsLabel HorizontalAlignment="Left" Margin="965,334,0,0" VerticalAlignment="Top" ComponentName="320-HYD" DetailsPageName="D320_2" />
 		<Labels:DetailsLabel HorizontalAlignment="Left" Margin="907,215,0,0" VerticalAlignment="Top" ComponentName="320-VIEW" DetailsPageName="D320" HideComponentName="True"/>
 		<TextBlock HorizontalAlignment="Left" Margin="85,732,0,0" TextWrapping="Wrap" 
             VerticalAlignment="Top" Height="50" Width="94" TextAlignment="Center" 
             FontSize="36" Foreground="Black" FontWeight="Bold"><Run Text="Q4"/><Run Language="it-it" Text="1"/><LineBreak/><Run Language="it-it"/></TextBlock>
+		<Labels:DeviceLabel HorizontalAlignment="Left" 
+		Margin="509,528,0,0" 
+		VerticalAlignment="Top" 
+		ComponentName="230-02-MA1"/>
+		<Labels:DeviceLabel HorizontalAlignment="Left" 
+		Margin="509,590,0,0" 
+		VerticalAlignment="Top" 
+		ComponentName="230-01-YA1"/>
+		<Labels:DetailsLabel Margin="1260,703,98,80" ComponentName="099-71-EXT" DetailsPageName="D099"/>
 	</Grid>
 </UserControl>
