--- a/Prevu.Synoptics.V3001-COVERIS/P514.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/P514.xaml
@@ -7,185 +7,189 @@
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              x:Class="Prevu.Synoptics.P514" mc:Ignorable="d" 
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
-    <Grid d:IsLocked="True">
-        <Labels:Pipe HorizontalAlignment="Left" Margin="327,445,0,0" VerticalAlignment="Top" Color="Oil" Width="246" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="514-02-MA1" d:IsLocked="True">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="488,393,0,0" VerticalAlignment="Top" Color="Oil" Width="128" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="514-02-MA1" d:IsLocked="True">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="722,449,0,0" VerticalAlignment="Top" Width="116" StatusComponent="514-04-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" d:IsLocked="True">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="558,164,0,0" VerticalAlignment="Top" Width="116" StatusComponent="496-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" d:IsLocked="True">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="809,571,0,0" VerticalAlignment="Top" Width="140" StatusComponent="516-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" d:IsLocked="True">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="874,630,0,0" VerticalAlignment="Top" Width="66" StatusComponent="516-01-MA1" PipeHeight="Medium" Height="22" d:IsLocked="True"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="326,326,0,0" VerticalAlignment="Top" Color="Oil" Width="279" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="514-02-MA1" d:IsLocked="True">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="222,391,0,0" VerticalAlignment="Top" Color="Oil" Width="250" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="514-02-MA1" d:IsLocked="True">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="529,104,0,0" VerticalAlignment="Top" Width="92" StatusComponent="496-01-MA1" PipeHeight="Medium" Height="24" RenderTransformOrigin="0.5,0.5" d:IsLocked="True">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="967,642,0,0" VerticalAlignment="Top" Width="87" RenderTransformOrigin="0.5,0.5" StatusComponent="518-01-MA1" PipeHeight="Medium" Height="22" d:IsLocked="True">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Rectangle HorizontalAlignment="Left" Height="2" Margin="788,304,0,0" Stroke="Black" VerticalAlignment="Top" Width="62" RenderTransformOrigin="0.5,0.5" d:IsLocked="True">
-            <Rectangle.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Rectangle.RenderTransform>
-        </Rectangle>
-        <Ellipse HorizontalAlignment="Left" Height="16" Margin="339,503,0,0" Stroke="#FFBDBDBD" VerticalAlignment="Top" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" d:IsLocked="True"/>
-        <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="919,600,0,0" VerticalAlignment="Top" Height="70" Width="64" d:IsLocked="True"/>
-        <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Left" Margin="769,498,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="131" Height="19" d:IsLocked="True">
-            <Machines:SCW_ScrewConveyor_straight.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:SCW_ScrewConveyor_straight.RenderTransform>
-        </Machines:SCW_ScrewConveyor_straight>
-        <Machines:EXC_HeatExchanger HorizontalAlignment="Left" Margin="315,366,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="52" Width="66" d:IsLocked="True">
-            <Machines:EXC_HeatExchanger.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90.3"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:EXC_HeatExchanger.RenderTransform>
-        </Machines:EXC_HeatExchanger>
-        <Machines:FP_FiltroPressa_001 HorizontalAlignment="Left" Height="220" Margin="523,224,0,0" VerticalAlignment="Top" Width="294" d:IsLocked="True"/>
-        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="309,252,0,0" VerticalAlignment="Top" Color="Water" RenderTransformOrigin="0.5,0.5" Height="45" Width="77" d:IsLocked="True">
-            <Machines:CV_Valve_001.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="270"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:CV_Valve_001.RenderTransform>
-        </Machines:CV_Valve_001>
-        <Machines:WaterPump HorizontalAlignment="Left" Margin="415,422,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="66" Width="55" Color="Oil" d:IsLocked="True">
-            <Machines:WaterPump.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="180"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:WaterPump.RenderTransform>
-        </Machines:WaterPump>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
+	<Grid>
+		<Labels:Pipe HorizontalAlignment="Left" Margin="327,475,0,0" VerticalAlignment="Top" Color="Oil" Width="246" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="514-02-MA1">
+			<Labels:Pipe.RenderTransform>
+				<TransformGroup>
+					<ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
+					<SkewTransform/>
+					<RotateTransform Angle="0"/>
+					<TranslateTransform/>
+				</TransformGroup>
+			</Labels:Pipe.RenderTransform>
+		</Labels:Pipe>
+		<Labels:Pipe HorizontalAlignment="Left" Margin="488,423,0,0" VerticalAlignment="Top" Color="Oil" Width="128" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="514-02-MA1">
+			<Labels:Pipe.RenderTransform>
+				<TransformGroup>
+					<ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
+					<SkewTransform/>
+					<RotateTransform Angle="90"/>
+					<TranslateTransform/>
+				</TransformGroup>
+			</Labels:Pipe.RenderTransform>
+		</Labels:Pipe>
+		<Labels:Pipe HorizontalAlignment="Left" Margin="722,449,0,0" VerticalAlignment="Top" Width="116" StatusComponent="514-04-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10">
+			<Labels:Pipe.RenderTransform>
+				<TransformGroup>
+					<ScaleTransform/>
+					<SkewTransform/>
+					<RotateTransform Angle="90"/>
+					<TranslateTransform/>
+				</TransformGroup>
+			</Labels:Pipe.RenderTransform>
+		</Labels:Pipe>
+		<Labels:Pipe HorizontalAlignment="Left" Margin="558,164,0,0" VerticalAlignment="Top" Width="116" StatusComponent="496-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10">
+			<Labels:Pipe.RenderTransform>
+				<TransformGroup>
+					<ScaleTransform/>
+					<SkewTransform/>
+					<RotateTransform Angle="90"/>
+					<TranslateTransform/>
+				</TransformGroup>
+			</Labels:Pipe.RenderTransform>
+		</Labels:Pipe>
+		<Labels:Pipe HorizontalAlignment="Left" Margin="809,571,0,0" VerticalAlignment="Top" Width="140" StatusComponent="516-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10">
+			<Labels:Pipe.RenderTransform>
+				<TransformGroup>
+					<ScaleTransform/>
+					<SkewTransform/>
+					<RotateTransform Angle="90"/>
+					<TranslateTransform/>
+				</TransformGroup>
+			</Labels:Pipe.RenderTransform>
+		</Labels:Pipe>
+		<Labels:Pipe HorizontalAlignment="Left" Margin="874,630,0,0" VerticalAlignment="Top" Width="66" StatusComponent="516-01-MA1" PipeHeight="Medium" Height="22"/>
+		<Labels:Pipe HorizontalAlignment="Left" Margin="326,356,0,0" VerticalAlignment="Top" Color="Oil" Width="279" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="514-02-MA1">
+			<Labels:Pipe.RenderTransform>
+				<TransformGroup>
+					<ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
+					<SkewTransform/>
+					<RotateTransform Angle="0"/>
+					<TranslateTransform/>
+				</TransformGroup>
+			</Labels:Pipe.RenderTransform>
+		</Labels:Pipe>
+		<Labels:Pipe HorizontalAlignment="Left" Margin="222,421,0,0" VerticalAlignment="Top" Color="Oil" Width="250" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="514-02-MA1">
+			<Labels:Pipe.RenderTransform>
+				<TransformGroup>
+					<ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
+					<SkewTransform/>
+					<RotateTransform Angle="90"/>
+					<TranslateTransform/>
+				</TransformGroup>
+			</Labels:Pipe.RenderTransform>
+		</Labels:Pipe>
+		<Labels:Pipe HorizontalAlignment="Left" Margin="529,104,0,0" VerticalAlignment="Top" Width="92" StatusComponent="496-01-MA1" PipeHeight="Medium" Height="24" RenderTransformOrigin="0.5,0.5">
+			<Labels:Pipe.RenderTransform>
+				<TransformGroup>
+					<ScaleTransform/>
+					<SkewTransform/>
+					<RotateTransform Angle="0"/>
+					<TranslateTransform/>
+				</TransformGroup>
+			</Labels:Pipe.RenderTransform>
+		</Labels:Pipe>
+		<Labels:Pipe HorizontalAlignment="Left" Margin="967,642,0,0" VerticalAlignment="Top" Width="87" RenderTransformOrigin="0.5,0.5" StatusComponent="518-01-MA1" PipeHeight="Medium" Height="22">
+			<Labels:Pipe.RenderTransform>
+				<TransformGroup>
+					<ScaleTransform/>
+					<SkewTransform/>
+					<RotateTransform Angle="0"/>
+					<TranslateTransform/>
+				</TransformGroup>
+			</Labels:Pipe.RenderTransform>
+		</Labels:Pipe>
+		<Rectangle HorizontalAlignment="Left" Height="2" Margin="788,304,0,0" Stroke="Black" VerticalAlignment="Top" Width="62" RenderTransformOrigin="0.5,0.5">
+			<Rectangle.RenderTransform>
+				<TransformGroup>
+					<ScaleTransform/>
+					<SkewTransform/>
+					<RotateTransform Angle="0"/>
+					<TranslateTransform/>
+				</TransformGroup>
+			</Rectangle.RenderTransform>
+		</Rectangle>
+		<Ellipse HorizontalAlignment="Left" Height="16" Margin="339,533,0,0" Stroke="#FFBDBDBD" VerticalAlignment="Top" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}"/>
+		<Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="919,600,0,0" VerticalAlignment="Top" Height="70" Width="64"/>
+		<Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Left" Margin="769,498,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="131" Height="19">
+			<Machines:SCW_ScrewConveyor_straight.RenderTransform>
+				<TransformGroup>
+					<ScaleTransform/>
+					<SkewTransform/>
+					<RotateTransform Angle="0"/>
+					<TranslateTransform/>
+				</TransformGroup>
+			</Machines:SCW_ScrewConveyor_straight.RenderTransform>
+		</Machines:SCW_ScrewConveyor_straight>
+		<Machines:EXC_HeatExchanger HorizontalAlignment="Left" Margin="315,396,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="52" Width="66">
+			<Machines:EXC_HeatExchanger.RenderTransform>
+				<TransformGroup>
+					<ScaleTransform/>
+					<SkewTransform/>
+					<RotateTransform Angle="90.3"/>
+					<TranslateTransform/>
+				</TransformGroup>
+			</Machines:EXC_HeatExchanger.RenderTransform>
+		</Machines:EXC_HeatExchanger>
+		<Machines:FP_FiltroPressa_001 HorizontalAlignment="Left" Height="220" Margin="523,224,0,0" VerticalAlignment="Top" Width="294"/>
+		<Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="309,282,0,0" VerticalAlignment="Top" Color="Water" RenderTransformOrigin="0.5,0.5" Height="45" Width="77">
+			<Machines:CV_Valve_001.RenderTransform>
+				<TransformGroup>
+					<ScaleTransform/>
+					<SkewTransform/>
+					<RotateTransform Angle="270"/>
+					<TranslateTransform/>
+				</TransformGroup>
+			</Machines:CV_Valve_001.RenderTransform>
+		</Machines:CV_Valve_001>
+		<Machines:WaterPump HorizontalAlignment="Left" Margin="415,452,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="66" Width="55" Color="Oil">
+			<Machines:WaterPump.RenderTransform>
+				<TransformGroup>
+					<ScaleTransform/>
+					<SkewTransform/>
+					<RotateTransform Angle="180"/>
+					<TranslateTransform/>
+				</TransformGroup>
+			</Machines:WaterPump.RenderTransform>
+		</Machines:WaterPump>
+		<Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="768,524,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="516-01-MA1" d:IsLocked="True"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            ComponentName="516-01-MA1"/>
+		<Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="906,670,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="518-01-MA1" d:IsLocked="True"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            ComponentName="518-01-MA1"/>
+		<Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="633,168,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="514-04-MA1" d:IsLocked="True"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="473,249,0,0" 
+            ComponentName="514-04-MA1"/>
+		<Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="441,305,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="514-01-MA1" d:IsLocked="True"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="242,249,0,0" 
+            ComponentName="514-01-MA1"/>
+		<Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="242,279,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="514-21-CV1" d:IsLocked="True"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="398,484,0,0" 
+            ComponentName="514-21-CV1"/>
+		<Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="398,514,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="514-02-MA1" d:IsLocked="True"/>
-        <Labels:DetailsLabel HorizontalAlignment="Left" Margin="850,280,0,0" VerticalAlignment="Top" ComponentName="514-HYD" DetailsPageName="D514" d:IsLocked="True" />
-        <Labels:JumpLabel HorizontalAlignment="Left" 
+            ComponentName="514-02-MA1"/>
+		<Labels:DetailsLabel HorizontalAlignment="Left" Margin="850,280,0,0" VerticalAlignment="Top" ComponentName="514-HYD" DetailsPageName="D514" />
+		<Labels:JumpLabel HorizontalAlignment="Left" 
             Margin="1039,618,0,0" 
             VerticalAlignment="Top" 
             JumpFromLabel="518-01-MA1" 
-            JumpToLabel="520-01-MA1" d:IsLocked="True"/>
-        <Labels:JumpLabel HorizontalAlignment="Left" 
+            JumpToLabel="520-01-MA1"/>
+		<Labels:JumpLabel HorizontalAlignment="Left" 
             Margin="448,81,0,0" 
             VerticalAlignment="Top" 
             JumpFromLabel="514-04-MA1" 
-            JumpToLabel="496-01-MA1" d:IsLocked="True"/>
-    </Grid>
+            JumpToLabel="496-01-MA1"/>
+		<Labels:DeviceLabel HorizontalAlignment="Left" 
+		Margin="445,200,0,0" 
+		VerticalAlignment="Top" 
+		ComponentName="514-F-PRESS"/>
+	</Grid>
 </UserControl>
